--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 
     <div class="form-group">
         <label for="province">Tỉnh/Thành phố:</label>
-        <input type="text" id="province" placeholder="Nhập tên tỉnh/thành phố">
+       <input id="province" class="select-box ui-autocomplete-input" autocomplete="off">
     </div>
 
     <div class="form-group">
         <label for="district">Quận/Huyện:</label>
-        <input type="text" id="district" placeholder="Nhập tên quận/huyện">
+       <input id="district" class="select-box ui-autocomplete-input" autocomplete="off">
     </div>
 
     <div class="form-group">
         <label for="ward">Phường/Xã:</label>
-        <input type="text" id="ward" placeholder="Nhập tên phường/xã">
+         <input id="ward" class="select-box ui-autocomplete-input" autocomplete="off">
     </div>
 
     <button class="search-btn">Tìm kiếm</button>
